components/quarkus-component-e2e-jcsjsrzbcq/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: pet-clinic-e2e-gsixxteyvo
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: quarkus-component-e2e-jcsjsrzbcq
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elquarkus-component-e2e-jcsjsrzbcq
  namespace: has-e2e-f6971190-6f67-485f-b43c-b0528ad137bf
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-quarkus-component-e2e-jcsjsrzbcq
    weight: null
status: {}
